--- a/MachineLearningDemo/MachineLearningDemo.csproj
+++ b/MachineLearningDemo/MachineLearningDemo.csproj
@@ -11,8 +11,11 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.ML" Version="1.3.1" />
+    <PackageReference Include="Microsoft.ML.ImageAnalytics" Version="1.3.1" />
     <PackageReference Include="Microsoft.ML.LightGbm" Version="1.3.1" />
+    <PackageReference Include="Microsoft.ML.TensorFlow" Version="1.3.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
+    <PackageReference Include="SciSharp.TensorFlow.Redist" Version="2.3.0" />
   </ItemGroup>
 
 
