--- a/MachineLearningDemo/MachineLearningDemo.csproj
+++ b/MachineLearningDemo/MachineLearningDemo.csproj
@@ -8,6 +8,8 @@
 
 
   <ItemGroup>
+    <PackageReference Include="Google.Apis.Vision.v1" Version="1.48.0.2024" />
+    <PackageReference Include="Google.Cloud.Vision.V1" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.ML" Version="1.3.1" />
