fraud detection update

--- a/MachineLearningDemo/MachineLearningDemo.csproj
+++ b/MachineLearningDemo/MachineLearningDemo.csproj
@@ -23,6 +23,8 @@
 
   <ItemGroup>
     <None Include="wwwroot\images\tenor.gif" />
+    <None Include="wwwroot\training-files\testData.csv" />
+    <None Include="wwwroot\training-files\trainData.csv" />
   </ItemGroup>
 
 
